--- a/bower.json
+++ b/bower.json
@@ -13,12 +13,13 @@
     "test",
     "tests"
   ],
-  "main":"aa",
+  "main": "aa",
   "dependencies": {
     "paper": "~0.9.15",
     "qunit": "~1.14.0",
     "requirejs": "~2.1.11",
     "underscore": "~1.6.0",
-    "underscore.string": "~2.3.3"
+    "underscore.string": "~2.3.3",
+    "straps": "~1.4.3"
   }
 }
