--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-qunit-amd": "^0.1.1",
     "grunt-contrib-requirejs": "^0.4.3",
     "bower": "^1.2.8",
-    "grunt-bower-requirejs": "^0.9.0"
+    "grunt-bower-requirejs": "^0.9.0",
+    "grunt-bower-task": "^0.3.4"
   },
   "dependencies": {
     "bower-requirejs": "^0.10.0"
