--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "grunt-contrib-requirejs": "^0.4.3",
     "bower": "^1.2.8",
     "grunt-bower-requirejs": "^0.9.0",
-    "grunt-bower-task": "^0.3.4"
+    "grunt-bower-task": "^0.3.4",
+    "grunt-contrib-copy": "^0.5.0"
   },
   "dependencies": {
     "bower-requirejs": "^0.10.0"
